# Server-Client-Communication-In-C

./: CMakeLists.txt  README.md  client.c  main.c  socketUtil.h
client/: client.c
client/headers/Contacts/: ContactManagement.h  ContactService.h
client/headers/Menu/: MenuConfig.h  MenuNavigationHelper.h  MenuTextResource.h
client/headers/MenuNavigation/: menuNavigation.h  menuNavigationLogic.h
client/headers/Messages/: MessageService.h  messages.h
headers/: IOutil.h  contacts.h  hashTable.h  sockUtil.h  userFileManagement.h  userManagementUtil.h
prototype/: client  client.c  server.c  sockUtilPrototype.h  socketUtil.h
server/: server  server.c  userList.txt
server/headers/: IOutil.h  hashTable.h  userManagementUtil.h
server/headers/HashTable/: hashTableStructure.h
server/headers/MessageManagement/: MessageService.h  MessageStructure.h  messageStructure.h
server/headers/SocketManagement/: sockUtil.h
server/headers/UserManagement/: userFileManagement.h  userStructure.h
serverDomain/: userList.txt
util/: hashTable.h  userManagementUtil.h
